<resources>
    <string name="app_name">Resurrection YYA</string>

    <!--Content description for images-->
    <string name="logo">RCCG logo</string>

    <!--All Card strings-->
    <string name="New_member">Add member</string>
    <string name="Group">My Groups</string>
    <string name="Send_to_all">Bulk email</string>
    <string name="Send_to_all_text">Bulk text</string>

    <!--All login strings-->
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Re-enter Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="reg">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Unfortunately, we were unable to register at this time. Try again later</string>
    <string name="auth_failed_login">Username or Password incorrect.</string>

    <!--New youth form strings-->
    <string name="enter_full_name">Full Name</string>
    <string name="enter_home">Home Address</string>
    <string name="enter_number">Phone number</string>
    <string name="enter_email">Email address</string>

    <!--Menu strings-->
    <string name="signout">Sign out</string>
    <string name="Generate">Generate</string>
    <string name="search">Sign out</string>
    <string name="action_search">Search</string>
</resources>
